[gd_scene load_steps=3 format=2]

[ext_resource path="res://script/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/UI_dynamicfont.tres" type="DynamicFont" id=2]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -35.0
margin_right = 35.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Game Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButtons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 76.1093
margin_top = -180.0
margin_right = 303.109
margin_bottom = 180.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="MainMenuButtons"]
margin_right = 227.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"

[node name="Continue" type="Button" parent="MainMenuButtons"]
margin_top = 76.0
margin_right = 227.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 183, -26 )
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="Options" type="Button" parent="MainMenuButtons"]
margin_top = 152.0
margin_right = 227.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="Level Editor" type="Button" parent="MainMenuButtons"]
margin_top = 228.0
margin_right = 227.0
margin_bottom = 284.0
custom_fonts/font = ExtResource( 2 )
text = "Level Editor"

[node name="Exit" type="Button" parent="MainMenuButtons"]
margin_top = 304.0
margin_right = 227.0
margin_bottom = 360.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"
[connection signal="pressed" from="MainMenuButtons/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="MainMenuButtons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenuButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenuButtons/Level Editor" to="." method="_on_Level_Editor_pressed"]
[connection signal="pressed" from="MainMenuButtons/Exit" to="." method="_on_Exit_pressed"]
